2008-01-24  Tom Tromey  <tromey@redhat.com>

	* resource/gnu/classpath/tools/native2ascii/messages.properties
	(Native2ASCII.ReversedHelpCompat): New.
	* tools/gnu/classpath/tools/native2ascii/Native2ASCII.java
	(createParser): Add -reverse.  Update -reversed.

2008-01-21  Luciano Chavez  <lnx1138@us.ibm.com>

	PR libgcj/34369:
	* java/net/URI.java (relativize): Check initial segment for
	trailing "/".

2008-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* m4/acinclude.m4:
	Remove bootclasspath option which fails with
	OpenJDK javac.
	
2008-01-14  Roman Kennke  <kennke@aicas.com>

	* javax/tools/FileObject.java: New interface.

2008-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/accessibility/AccessibleAction.java:
	(CLICK): Added.
	(TOGGLE_POPUP): Likewise.
	* javax/accessbiility/AccessibleRole.java:
	(HTML_CONTAINER): Added.
	
2008-01-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/accessibility/AccessibleAttributeSequence.java:
	(AccessibleAttributeSequence(int,int,AttributeSet)):
	Implemented.
	* javax/accessibility/AccessibleTextSequence.java:
	(AccessibleTextSequence(int,int,String)):
	Likewise.
	
2008-01-13  Leen Toelen  <toelen@gmail.com>

	* native/fdlibm/ieeefp.h: Added avr32 support.

2008-01-09  Stefan Huehner <stefan@huehner.org>
       
	* native/jni/java-io/java_io_VMObjectStreamClass.c,
	* native/jni/java-lang/java_lang_VMDouble.c,
	* native/jni/java-net/java_net_VMInetAddress.c:
	Don't discard const by casting (const char *) to
	(char *) when it's not needed.

2008-01-09  Stefan Huehner <stefan@huehner.org>

	* gnu/classpath/jdwp/event/ExceptionEvent.java,
	* gnu/java/awt/peer/gtk/GtkMainThread.java:
	Use Boolean.TRUE|FALSE instead of new Boolean(true|false)
	* gnu/java/rmi/server/ConnectionRunnerPool.java,
	* gnu/xml/aelfred2/XmlParser.java,
	* gnu/xml/libxmlj/dom/GnomeXPathResult.java,
	* gnu/xml/stream/XIncludeFilter.java:
	Use Integer|Double|Charater.toString(var) instead of