@@ -40,5 +40,5 @@ Native2ASCII.Usage=Usage: native2ascii [OPTIONS]... [INPUTFILE [OUTPUTFILE]]
 Native2ASCII.EncodingHelp=encoding to use
 Native2ASCII.EncodingArgName=NAME
 Native2ASCII.EncodingSpecified=encoding already specified
-Native2ASCII.ReversedHelp=convert from encoding to native
-Native2ASCII.ReversedHelpCompat=alias for -reverse (deprecated)
+Native2ASCII.ReverseHelp=convert from encoding to native
+
